# pytour

./: .gitattributes  1.1.html  1.2.html  1.html  404.html  README.md  ch00-00-introduction.html  ch01-00-getting-started.html  ch01-01-installation.html  ch01-02-hello-world.html  foreword.html  index.html  init_book.sh  pytour.html  searchindex.js  searchindex.json
.github/workflows/: book.yml
book/: .gitattributes  .gitignore  README.md  book.toml
book/extra/: main.py
book/src/: 404.md  SUMMARY.md  ch00-00-introduction.md  ch01-00-getting-started.md  ch01-01-installation.md  ch01-02-hello-world.md  foreword.md  pytour.md
book/src/chapter-1/: chapter_1_1.md
book/src/charpter-1/: 1.md
book/theme/: custom.js  highlight.js
mdbook-pytour/: Cargo.toml  README.md  TODO.md
mdbook-pytour/src/: embed.rs  lib.rs  main.rs  pytour.rs  work.rs
pytour/: README.md  ToDo.md
theme/: custom.css
work/: README.md
work/000-hello-python/: answer.md  config.toml  in-out.toml  work.md
work/print/: answer.md  config.toml  config.yml  in-out.toml  work.md
