[package]
name = "mdbook-pytour"
version = "0.1.0"
edition = "2021"
keywords = ["mdbook", "markdown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.*"
mdbook = "0.4.*"
serde_json = "1.*"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
